--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,7 +52,8 @@ body {
     grid-template-columns: repeat(10,40px);
     grid-template-rows: repeat(10,40px);
 }
-.opponent-grid div {
+.opponent-grid div,
+.my-grid div {
     display: flex;
     justify-content: center;
     align-items: center;
